[gd_scene load_steps=3 format=3 uid="uid://ciu0xt8d5rkf8"]

[ext_resource type="PackedScene" uid="uid://bqugt8ejy5671" path="res://Entity/Traits/Aggro.tscn" id="1_cb3e0"]
[ext_resource type="Script" path="res://Entity/Traits/Attack.gd" id="1_ht32l"]

[node name="Aggro" instance=ExtResource("1_cb3e0")]
script = ExtResource("1_ht32l")
damage = 10
attack_speed = 2.0

[node name="Attack_speed" type="Timer" parent="." index="1"]

[connection signal="ready" from="Attack_speed" to="." method="_on_attack_speed_ready"]
[connection signal="timeout" from="Attack_speed" to="." method="_on_attack_speed_timeout"]
